-- MySQL Script generated by MySQL Workbench
-- Wed Apr  2 21:26:16 2025
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema ABEDEPORT
-- -----------------------------------------------------
DROP SCHEMA IF EXISTS `ABEDEPORT` ;

-- -----------------------------------------------------
-- Schema ABEDEPORT
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `ABEDEPORT` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_spanish_ci ;
USE `ABEDEPORT` ;

-- -----------------------------------------------------
-- Table `ABEDEPORT`.`usuario`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ABEDEPORT`.`usuario` ;

CREATE TABLE IF NOT EXISTS `ABEDEPORT`.`usuario` (
  `id_usuario` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(100) NULL,
  `apellido` VARCHAR(100) NULL,
  `correo` VARCHAR(100) NOT NULL,
  `documento` VARCHAR(15) NOT NULL,
  `estado` TINYINT NULL,
  `is_admin` TINYINT(1) DEFAULT 0,
  `password` VARCHAR(255) NOT NULL,
  `red_social` VARCHAR(45) NOT NULL DEFAULT '',
  PRIMARY KEY (`id_usuario`),
  UNIQUE INDEX `correo_UNIQUE` (`correo` ASC),
  UNIQUE INDEX `documento_UNIQUE` (`documento` ASC))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `ABEDEPORT`.`blog_posts`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ABEDEPORT`.`blog_posts` ;

CREATE TABLE IF NOT EXISTS `ABEDEPORT`.`blog_posts` (
  `id_post` INT NOT NULL AUTO_INCREMENT,
  `titulo` VARCHAR(255) NOT NULL,
  `contenido` TEXT NOT NULL,
  `imagen` VARCHAR(255) NULL,
  `autor_id` INT NOT NULL,
  `estado` ENUM('borrador', 'publicado', 'archivado') DEFAULT 'borrador',
  `fecha_creacion` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  `fecha_publicacion` TIMESTAMP NULL,
  `fecha_actualizacion` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `slug` VARCHAR(255) UNIQUE,
  `meta_descripcion` VARCHAR(160) NULL,
  `etiquetas` VARCHAR(255) NULL,
  `like_count` INT DEFAULT 0,
  `comment_count` INT DEFAULT 0,
  PRIMARY KEY (`id_post`),
  INDEX `fk_blog_posts_usuario_idx` (`autor_id` ASC),
  INDEX `idx_estado` (`estado` ASC),
  INDEX `idx_fecha_publicacion` (`fecha_publicacion` ASC),
  INDEX `idx_like_count` (`like_count` ASC),
  INDEX `idx_comment_count` (`comment_count` ASC),
  CONSTRAINT `fk_blog_posts_usuario`
    FOREIGN KEY (`autor_id`)
    REFERENCES `ABEDEPORT`.`usuario` (`id_usuario`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

-- -----------------------------------------------------
-- Table `ABEDEPORT`.`tournaments`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ABEDEPORT`.`tournaments` ;

CREATE TABLE IF NOT EXISTS `ABEDEPORT`.`tournaments` (
  `id_tournament` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(100) NOT NULL,
  `deporte` ENUM('futbol', 'futsal', 'baloncesto', 'voleibol') NOT NULL,
  `temporada` VARCHAR(50) NOT NULL,
  `estado` ENUM('activo', 'finalizado', 'proximo') DEFAULT 'activo',
  `fecha_inicio` DATE,
  `fecha_fin` DATE,
  PRIMARY KEY (`id_tournament`))
ENGINE = InnoDB;

-- -----------------------------------------------------
-- Table `ABEDEPORT`.`equipos_tournament`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ABEDEPORT`.`equipos_tournament` ;

CREATE TABLE IF NOT EXISTS `ABEDEPORT`.`equipos_tournament` (
  `id_equipo_tournament` INT NOT NULL AUTO_INCREMENT,
  `id_tournament` INT NOT NULL,
  `nombre_equipo` VARCHAR(100) NOT NULL,
  `ciudad` VARCHAR(100) NULL,
  `pais` VARCHAR(100) NULL,
  `logo` VARCHAR(255) NULL,
  `partidos_jugados` INT DEFAULT 0,
  `partidos_ganados` INT DEFAULT 0,
  `partidos_perdidos` INT DEFAULT 0,
  `partidos_empatados` INT DEFAULT 0,
  `puntos_favor` INT DEFAULT 0,
  `puntos_contra` INT DEFAULT 0,
  `puntos_totales` INT DEFAULT 0,
  `posicion` INT NULL,
  `destacado` TINYINT(1) DEFAULT 0,
  PRIMARY KEY (`id_equipo_tournament`),
  INDEX `fk_equipos_tournament_tournaments_idx` (`id_tournament` ASC),
  INDEX `idx_tournament_posicion` (`id_tournament` ASC, `posicion` ASC),
  CONSTRAINT `fk_equipos_tournament_tournaments`
    FOREIGN KEY (`id_tournament`)
    REFERENCES `ABEDEPORT`.`tournaments` (`id_tournament`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

-- -----------------------------------------------------
-- Table `ABEDEPORT`.`post_likes`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ABEDEPORT`.`post_likes`;

CREATE TABLE IF NOT EXISTS `ABEDEPORT`.`post_likes` (
  `id_like` INT NOT NULL AUTO_INCREMENT,
  `post_id` INT NOT NULL,
  `user_id` INT NOT NULL,
  `fecha_like` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (`id_like`),
  INDEX `fk_post_likes_blog_posts_idx` (`post_id` ASC),
  INDEX `fk_post_likes_usuario_idx` (`user_id` ASC),
  UNIQUE INDEX `unique_user_post_like` (`post_id` ASC, `user_id` ASC),
  CONSTRAINT `fk_post_likes_blog_posts`
    FOREIGN KEY (`post_id`)
    REFERENCES `ABEDEPORT`.`blog_posts` (`id_post`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_post_likes_usuario`
    FOREIGN KEY (`user_id`)
    REFERENCES `ABEDEPORT`.`usuario` (`id_usuario`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

-- -----------------------------------------------------
-- Table `ABEDEPORT`.`post_comments`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `ABEDEPORT`.`post_comments`;

CREATE TABLE IF NOT EXISTS `ABEDEPORT`.`post_comments` (
  `id_comment` INT NOT NULL AUTO_INCREMENT,
  `post_id` INT NOT NULL,
  `user_id` INT NOT NULL,
  `contenido` TEXT NOT NULL,
  `fecha_comentario` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  `fecha_actualizacion` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `estado` ENUM('activo', 'moderado', 'eliminado') DEFAULT 'activo',
  `parent_comment_id` INT NULL,
  PRIMARY KEY (`id_comment`),
  INDEX `fk_post_comments_blog_posts_idx` (`post_id` ASC),
  INDEX `fk_post_comments_usuario_idx` (`user_id` ASC),
  INDEX `fk_post_comments_parent_idx` (`parent_comment_id` ASC),
  INDEX `idx_comment_fecha` (`fecha_comentario` ASC),
  INDEX `idx_comment_estado` (`estado` ASC),
  CONSTRAINT `fk_post_comments_blog_posts`
    FOREIGN KEY (`post_id`)
    REFERENCES `ABEDEPORT`.`blog_posts` (`id_post`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_post_comments_usuario`
    FOREIGN KEY (`user_id`)
    REFERENCES `ABEDEPORT`.`usuario` (`id_usuario`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_post_comments_parent`
    FOREIGN KEY (`parent_comment_id`)
    REFERENCES `ABEDEPORT`.`post_comments` (`id_comment`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
